--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.3.8"
   },
   "devDependencies": {
+    "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "typescript": "^4.0.5"
   }
