--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "js-cookie": "^2.2.1",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
