--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "js-cookie": "^2.2.1",
@@ -19,6 +20,9 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "swr": "^0.3.8"
   },
   "devDependencies": {
