--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
+    "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "swr": "^0.3.8"
