--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "js-cookie": "^2.2.1",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
+    "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "swr": "^0.3.8"
