--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.19.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.1",
     "react": "17.0.1",
