--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
+    "react-text-mask": "^5.4.3",
     "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
