--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.2",
     "react-text-mask": "^5.4.3",
     "react-toastify": "^6.2.0",
+    "recharts": "^2.1.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "swr": "^0.3.8"
